# minc

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  BUGS  CHANGES  CMakeLists.txt  COPYING  ChangeLog  GETTING_STARTED  INSTALL  INSTALL.minc  LIBMINCConfig.cmake.in  LICENSE  MINC2Config.cmake.in  Make_configuration.dist  Make_configuration.in  Make_configuration.old  Make_machine_specific.in  Makefile  Makefile.am  Makefile.msvc-win32  NEWS  README  README.binary_packaging  README.release  TODO  UseLIBMINC.cmake.in  UseMINC2.cmake.in  WHATSNEW-2.0  autogen.sh  config.h.cmake  configure  configure.ac  configure.in  epm-header.in  itk-module.cmake  mni_minc.epm.header
conversion/: CMakeLists.txt
conversion/Acr_nema/: AUTHORS  COPYING  ChangeLog  Make_acrdefs  Makefile  Makefile.am  NEWS  acr_io.c  acr_nema.h  acr_test.c  autogen.sh  configure.ac  copy_acr_nema.c  dicom.txt  dicom_client_routines.c  dicom_network.c  dicom_test.c  dump_acr_nema.c  element.c  extract_acr_nema.c  file_io.c  globals.c  group.c  message.c  read_acr_nema.c  sample_dicom_client.c  value_repr.c
conversion/ana2mnc/: README  ana2mnc  ana2mnc_xfm_reduce.pl  ana_dump.pl  make_links  spm_show
conversion/dcm2mnc/: acr_element_defs.h  dcm2mnc.c  dcm2mnc.h  dcm2mnc.man1  dicom_read.c  dicom_read.h  dicom_to_minc.c  dicom_to_minc.h  ext_element_defs.h  gems_element_defs.h  minc_file.c  minc_file.h  numaris.txt  pms_element_defs.h  progress.c  progress.h  siemens_header_defs.h  siemens_header_table.h  siemens_to_dicom.c  siemens_to_dicom.h  spi_element_defs.h  string_to_filename.c  string_to_filename.h
conversion/dicomserver/: Makefile  dicom_element_defs.h  dicom_prototypes.h  dicomserver-debug.c  dicomserver.c  dicomserver.h  minc_file.c  open_connection.c  project_file.c  reply.c  save_transferred_object.c  siemens_dicom_read.c  siemens_dicom_to_minc.c  siemens_dicom_to_minc.h  spi_element_defs.h  string_to_filename.c  use_the_files.c
conversion/dicomserver_sonata/: Makefile  byte_swap  dcm2mnc.c  dcm2mnc2.c  dicom_element_defs.c  dicom_element_defs.h  dicom_prototypes.h  dicomreader.c  dicomserver-debug.c  dicomserver-nondebug.c  dicomserver-nondebug2.c  dicomserver.h  dump_acr_nema  extract  extract_acr_nema  make_element_table  minc_file.c  modify_group_list.c  open_connection.c  parse_dicom_groups.c  progress.c  project_file.c  reply.c  save_transferred_object.c  siemens_dicom_read.c  siemens_dicom_send.c  siemens_dicom_to_minc.c  siemens_dicom_to_minc.h  siemens_header_table.h  siemens_to_dicom.c  spi_element_defs.h  string_to_filename.c  use_the_files.c  valid_element_ids
conversion/ecattominc/: Makefile  dump_ecat_header.c  ecat_file.c  ecat_file.h  ecat_header_definition.h  ecattominc.c  ecattominc.man1  machine_indep.c  machine_indep.h
conversion/gcomserver/: .cvsignore  Makefile  convert_to_dicom.c  gcom_prototypes.h  gcomserver-debug.c  gcomserver.c  gcomserver.h  gcomserver_compress  gcomtodicom.c  gyro_read.c  gyro_to_minc.c  gyro_to_minc.h  gyrotominc.c  minc_file.c  open_connection.c  project_file.c  reply.c  save_transferred_object.c  spi_element_defs.c  spi_element_defs.h  spi_message.c  string_to_filename.c  use_the_files.c
conversion/image_filters/: Makefile  atob.c  atof.c  atoi.c  atol.c  btoa.c  btof.c  byte_swap.c  byte_swap4.c  extract.c  fmaxmin.c  frange.c  fscale.c  ftoa.c  ftob.c  ftoi.c  ftoui.c  imageinvert.c  imagetranspose.c  insert.c  itoa.c  itof.c  ltoa.c  reecho.c  skipdata.c  uitof.c
conversion/m2f2mnc/: m2f2mnc
conversion/micropet/: upet2mnc.c  upet2mnc.man1
conversion/mif2mnc/: mif2mnc
conversion/minctoecat/: ecat_write.c  ecat_write.h  machine_indep.c  machine_indep.h  minctoecat.c  minctoecat.man1
conversion/mnitominc/: Makefile  mnitominc.c  mnitominc.h
conversion/mri_to_minc/: Makefile  dgtoieee.pl  dicom_to_minc.pl  dicomfile_to_minc.pl  ge4_to_minc.old  ge4_to_minc.pl  ge5_to_minc.old  ge5_to_minc.pl  ge_uncompress.c  gedicom_to_minc.pl  mri_to_minc.pl  siemens_magnetom_vision_to_minc.pl  siemens_to_minc.pl
conversion/nifti1/: Makefile.am  README.txt  analyze75.h  mnc2nii.c  mnc2nii.man1  nifti1_io.h  nifti1_local.h  nii2mnc.c  nii2mnc.man1  znzlib.c
conversion/scxtominc/: Makefile  define_scx_header.perl  insertblood.c  isotope_list.h  pc5r1.drs  pc6r1.drs  scx_file.c  scx_file.h  scx_header_def.h  scxmnem.c  scxtominc.c
conversion/sdt2mnc/: sdt2mnc
conversion/siemens_mosaic2mnc/: ASCCONV_info  COPYING  ChangeLog  INSTALL  MANIFEST  Makefile.PL  README  siemens_mosaic2mnc
conversion/vff2mnc/: vff2mnc.c  vff2mnc.h  vff2mnc.man1
doc/: .cvsignore  Makefile  Makefile.am  README.md  prog_guide.tex  prog_ref.tex
ezminc/: CMakeLists.txt  minc_1_rw.cpp  minc_1_rw.h  minc_1_simple.h  minc_1_simple_rw.cpp  minc_1_simple_rw.h  minc_io_4d_volume.h  minc_io_exceptions.h  minc_io_fixed_vector.h  minc_io_simple_volume.h
ezminc/examples/: CMakeLists.txt  fuzzy_volume_similarity.cpp  trilinear_resample.cpp  volume_avg.cpp  volume_gtc_similarity.cpp  volume_msq_dist.cpp  volume_similarity.cpp
ezminc/tests/: CMakeLists.txt  ezminc_rw_test.cpp  ezminc_stats.cpp  minc_com.cpp  (+6 more)
minc4itk/: CMakeLists.txt  itkMincImageIO.cxx  itkMincImageIO.h  itkMincImageIOFactory.cxx  itkMincImageIOFactory.h  minc4itk_plugin.cxx  minc_general_transform.h  minc_helpers.cxx  minc_helpers.h
progs/: CMakeLists.txt  Make.com  Make_progs  Make_scripts  Makefile  Makefile.sample
testdir/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  create_grid_xfm.c  icv.c  icv.mnc  icv.out  icv_dim.c  icv_dim.mnc  icv_dim1.c  icv_dim1.mnc  icv_dim1.out  icv_fillvalue.c  icv_fillvalue.mnc  icv_fillvalue.out  icv_range.c  icv_range.out  minc.c  minc2-Makefile.am  minc2-convert-test.c  minc2-create-test-images-2.c  minc2-create-test-images.c  minc2-dimension-test.c  minc2-grpattr-test.c  minc2-hyper-test-2.c  minc2-hyper-test.c  minc2-m2stats.c  minc2-multires-test.c  minc2-record-test.c  minc2-slice-test.c  minc2-valid-test.c  minc2-vector_dimension-test.c  minc2-volprops-test.c  minc_types.c  minc_types.out  mincapi.c  run_test2.csh  run_test2.sh  run_test2_cmake.sh  (+12 more)
(+451 files in other folders)
